--- a/generate.web/ClientApp/src/app/home/home.component.scss
+++ b/generate.web/ClientApp/src/app/home/home.component.scss
@@ -280,7 +280,7 @@ body {
         width: 100%;
         display: flex;
         justify-content: flex-start;
-        padding-left: 40px;
+        padding-left: 60px;
         flex-wrap: wrap;
         gap: 20px;
         order: 2;
